--- a/html/index.html
+++ b/html/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE>
-<html>
+<html id= "outter">
   <head>
     <title>Chocolate Pizza</title>
-    <link rel="stylesheet"   href="css/style.css">
+    <link rel="stylesheet"   href="../css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header id= "Htop">
       <div id="topLogo">
         <img src="../img/logo.png">
       </div>
       <div id="delDiv">
-        <p id="par1">Delicious</p>
+        <p id="par1">  Delicious</p>
         <p id="par2">THE BEST FOOD BLOG ON THE WEB</p>
       </div>
       <div id="links">
@@ -25,41 +26,48 @@
       </div>
     </header>
     <main>
+      <br>
+      <hr>
       <h1>Chocolate Pizza</h1>
-      <p>POSTED ON 15 DEC 2013 / DESSERTS</p>
-      <img src="../img/choco-pizza.png">
-      <p>For the fig-swirl: Melt butter over medium heat in a saucepan.  Add brown sugar and stir to dissolve.  Halve the figs and toss in the saucepan with water and lemon juice.  Cook over medium heat, sitrring frequently, until you have a chunky-jammy mixture.  Add salt with one or two stirs, set aside and let cool completely.</p>
-        <p>Ice cream:  In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm.  Whisk in the eqq yolks.  Set mixture in the fridge and wait until the fix mixture is cooled.</p>
-          <p>Using an ice cream machine, pour liquids into the frozen basin and process according to the manufacturer instructions i.e., let spin and thicken for twenty minutes before adding macarpone, fig jam mixture, and the nuts.  Continue to process for +/- 10 minutes.  Pour semi-frozen mixture into a pyrex dish or a glass tupperware.  Freeze for at least two hours before serving.</p>
+      <p class="oblique">POSTED ON 15 DEC 2013 / DESSERTS</p>
+      <img src="../img/choco-pizza.png" width="700" height="auto">
+      <br>
+      <p class="oblique">For the fig-swirl: Melt butter over medium heat in a saucepan.  Add brown sugar and stir to dissolve.  Halve the figs and toss in the saucepan with water and lemon juice.  Cook over medium heat, sitrring frequently, until you have a chunky-jammy mixture.  Add salt with one or two stirs, set aside and let cool completely.</p>
+      <br>
+        <p class="oblique">Ice cream:  In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm.  Whisk in the eqq yolks.  Set mixture in the fridge and wait until the fix mixture is cooled.</p>
+        <br>
+          <p class="oblique">Using an ice cream machine, pour liquids into the frozen basin and process according to the manufacturer instructions i.e., let spin and thicken for twenty minutes before adding macarpone, fig jam mixture, and the nuts.  Continue to process for +/- 10 minutes.  Pour semi-frozen mixture into a pyrex dish or a glass tupperware.  Freeze for at least two hours before serving.</p>
 
-          <ul id= "ingredList">
-            <div class="leftSide">
-              <img src="../img/list-bg.png">
-              <li>1 1/2 cups milk</li>
-              <li>1/2 cup mascarpone</li>
-              <li>1/2 tsp pink salt</li>
-              <li>1 lb Black Mission Figs</li>
-              <li>1/2 cup brown sugar</li>
-              <li>2-4 tbsp water</li>
-            </div>
-            <div class="rightSide">
-              <li>1 1/2 cups heavy cream</li>
-              <li>1/3 granulated sugar</li>
-              <li>2 egg yolks</li>
-              <li>1 lemon, juiced</li>
-              <li>2 tbsp butter</li>
-              <li>1 cup honey roasted pecans, roughly chopped</li>
-            </div>
-          </ul>
+          <ul style="width:50%; float:left;">
+      <li>1 1/2 cups milk</li>
+      <li>1/2 cup mascarpone</li>
+      <li>1/2 tsp pink salt</li>
+      <li>1 lb Black Mission Figs</li>
+      <li>1/2 cup brown sugar</li>
+      <li>2-4 tbsp water</li>
+  </ul>
+
+   <ul>
+      <li>1 1/2 cups heavy cream</li>
+      <li>1 1/2 cups heavy cream</li>
+      <li>1/3 granulated sugar</li>
+      <li>2 egg yolks</li>
+      <li>1 lemon, juiced</li>
+      <li>2 tbsp butter</li>
+      <li>1 cup honey roasted pecans, roughly chopped</li>
+   </ul>
     </main>
-<footer>
+    <br>
+<footer id = "foot">
   <img src="../img/van-pic.png">
-  <p>Vanessa Stevenson</p>
-  <p>Food enthusiast, phtography fan.  Add a pinch of raw foodism and that's pretty much who I am.</p>
-  <div>
-    <a><a href="mailto:joe@example.com?subject=feedback">Share recipe</a>
+  <p class="oblique">Vanessa Stevenson</p>
+  <p class="oblique">Food enthusiast, phtography fan.  Add a pinch of raw foodism and that's pretty much who I am.</p>
+  <div id= "email">
+    <a><a href="mailto:joe@chocolatepizza.com?subject=feedback"><button type="button">Share recipe</a>
   </div>
-  <div>
+  <br>
+  <br>
+  <div id= "bottom">
     <img src="../img/small-logo.png">
     <p>Delicious &#169; 2013 * All Rights Reserved.</p>
     <p>Proudly published with Ghost.</p>
